[Fix]: Fixed out of place Open Spotify Button

--- a/client/src/Components/OpenSpotifyBtn.css
+++ b/client/src/Components/OpenSpotifyBtn.css
@@ -12,10 +12,10 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    /* left: 50%; */
+    /* position: absolute; */
+    /* top: 50%; */
+    /* transform: translate(-50%,-50%); */
     width: 160px;
     padding: 6px;
     border-radius: 5px;
